# fireclub-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml.template  init.py  install.sh
rl/: Dockerfile  README.md  a2c_scratch.ipynb  requirements.txt
workspace/: .gitignore  Dockerfile  docker-compose.yaml.template  pyproject.toml  requirements.txt
workspace/src/: main.py
