[tool.poetry]
name = "fireclub"
version = "0.1.0"
description = "Fireclub Template"
authors = ["Your Name <your@email.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0"

# 데이터 처리
pandas = "^2.2.0"
numpy = "^1.26"
scipy = "^1.12"

# 시각화
matplotlib = "^3.8"
seaborn = "^0.13"

# 머신러닝
scikit-learn = "^1.4"

# 시스템 연동
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
